[tool.poetry]
name = "urlphishing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.3"
tensorflow = "^2.16"
scikit-learn = "^1.4"
pandas = "^2.2"
numpy = "^1.26"
matplotlib = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
